# game-engine

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  FUTURE.md  claude.md  deploy.sh  game_engine.long-type-10436004750577464661.txt  game_engine.long-type-11894882762669083252.txt  game_engine.long-type-13930949313915546795.txt  package.json  run-tests.sh
.cargo/: config.toml
.github/workflows/: asset-refresh.yml  build.yml  ci.yml
assets/shaders/: m2_effect.wgsl  m2_skybox.wgsl  sky.wgsl  terrain.wgsl  water.wgsl
benches/: parser_benches.rs
data/textures/: editbox-white-fill.ktx2
data/ui/: nameplate-bg.ktx2
debug/: campsite-open.json  login.js
doc/: casc-db2-keys.md  casc-extraction.md  hotreload-frame-stability.md  network-integration.md  skybox-authored-lookup.md
docs/: adventurers-rest-mountain-brief.md  authentication.md  casc-architecture.md  casc-extraction.md  char-create-3d-investigation-2026-04-11.md  character-generation.md  character-texture-debugging-2026-03-27.md  editbox-focus-texture-swap-2026-04-06.md  geosets.md  hd-skeleton-status.md  helmet-geoset-extra-field-investigation-2026-03-28.md  helmet-hair-hiding-investigation-2026-03-28.md  inworld-unit-frames-reference.md  keybindings-scope.md  login-ui-porting.md  lore-knowledge-graph.md  nameplate-research-2026-03-27.md  network-integration.md  open-source-wow-clients.md  particle-system.md  pointlight-skinned-mesh-bug-2026-04-04.md  remote-login-debug-2026-03-06.md  skybox-authored-lookup.md  skyboxdebug-black-screen-brief-2026-04-11.md  target-circle-styles-2026-03-30.md  test-assets.md  torch-halo-investigation-2026-03-30.md  ui-addon-architecture.md  ui-automation-debugging.md  world-object-rotation-investigation-2026-03-22.md  wow-ui-sim-layout-spec-2026-03-31.md  wowee-collision.md
docs/plans/: 2026-03-05-ui-system.md  2026-03-06-auction-house.md  2026-03-06-cli-feature-expansion.md  2026-03-08-js-ui-automation.md  2026-03-23-replicated-equipment-appearance.md  2026-03-26-inworld-loading-screen.md
docs/wiki/: SCHEMA.md  index.md  log.md
examples/: ui_demo.rs
scripts/: capture_skybox_validation.sh  diff_ui_trees.py  generate_music_manifest.py  normalize_ui_dump.py  refresh_asset_data.sh  run_screenshot_regression.sh
src/: achievement.rs  action_bar.rs  animation.rs  app_runtime.rs  app_setup.rs  asset_lifetime.rs  auction_house.rs  barber_shop.rs  cache_metadata.rs  cache_source_mtime.rs  cache_sqlite.rs  calendar.rs  camera.rs  campsite_popup_screen.rs  char_create.rs  char_create_appearance.rs  char_create_data.rs  char_create_scene.rs  char_select.rs  char_select_input.rs  char_select_scene.rs  char_select_scene_tree.rs  char_select_tests.rs  char_texture_cache.rs  character_customization.rs  character_customization_tests.rs  character_export.rs  character_models.rs  cli_args.rs  client_options.rs  collection.rs  collision.rs  creature_display.rs  creature_display_cache.rs  creature_named_model_cache.rs  csv_util.rs  culling.rs  currency.rs  customization_cache.rs  customization_csv.rs  (+138 more)
src/animation/: billboard.rs
src/asset/: adt.rs  adt_obj.rs  adt_seam_tests.rs  adt_tex.rs  asset_cache.rs  asset_resolver.rs  blp.rs  casc_resolver.rs  char_texture.rs  char_texture_blit.rs  fogs_wdt.rs  m2.rs  m2_anim.rs  m2_anim_tests.rs  m2_attach.rs  m2_batch.rs  m2_bone_names.rs  m2_cache_stats.rs  m2_debug_tests.rs  m2_jaw_debug_tests.rs  m2_light.rs  m2_loader.rs  m2_particle.rs  m2_particle_defaults.rs  m2_runtime_head_tests.rs  m2_tests.rs  m2_texture.rs  mod.rs  read_bytes.rs  wmo.rs  wmo_tests.rs  wmo_tests_abbey.rs  wmo_tests_group_rendering.rs
src/char_select_scene/: background.rs  lighting.rs  mod.rs  scene_systems.rs  skybox.rs  tests.rs
src/game/: achievements.rs  action_bar_data.rs  auction_house_data.rs  bag_data.rs  barber_shop_data.rs  buff_data.rs  casting_data.rs  chat_data.rs  combat_feedback.rs  communities_data.rs  cooldown_data.rs  dress_up_data.rs  encounter_journal_data.rs  experience_data.rs  floating_combat_text.rs  friends_data.rs  gossip_data.rs  guild_bank_data.rs  guild_control_data.rs  guild_roster_data.rs  help_data.rs  item_tooltip_data.rs  lfg_data.rs  loot_data.rs  loss_of_control_data.rs  mail_data.rs  merchant_data.rs  minimap_data.rs  missile_data.rs  mod.rs  nameplate_data.rs  objective_tracker_data.rs  professions_data.rs  pvp_data.rs  quest_data.rs  quest_tracking.rs  raid_party_data.rs  reputation_data.rs  spell_list_data.rs  spell_visual_data.rs  (+2 more)
src/ipc/: format.rs  format_status.rs  format_terrain.rs  mod.rs  plugin.rs
src/rendering/: image_sampler.rs  mod.rs  weather.rs
src/scenes/: dump_tree.rs  inworld_tree.rs  mod.rs  scene_tree.rs  setup.rs  teardown.rs
src/sky/: inworld_skybox.rs  tests.rs
src/sound/: footstep_cache.rs  footsteps.rs  mod.rs  music_catalog.rs  music_zone_cache.rs  runtime.rs  runtime_ambient.rs  runtime_assets.rs  runtime_music.rs  runtime_spells.rs  runtime_tests.rs  runtime_ui.rs
src/ui/: addon_watcher.rs  anchor.rs  animation.rs  atlas.rs  automation.rs  automation_script.rs  dioxus_anchor.rs  dioxus_attrs.rs  dioxus_elements.rs  dioxus_hotreload_diff.rs  dioxus_hotreload_diff_tests.rs  dioxus_renderer.rs  dioxus_renderer_anchor.rs  dioxus_renderer_tests.rs  dioxus_renderer_tree.rs  dioxus_runtime.rs  dioxus_screen.rs  font_registry.rs  frame.rs  game_plugin.rs  input.rs  js_automation.rs  layout.rs  mod.rs  overlay.rs  panel_styles.rs  panel_tests.rs  plugin.rs  registry.rs  render.rs  render_border.rs  render_button.rs  render_nine_slice.rs  render_tests.rs  render_text.rs  render_text_fx.rs  render_texture.rs  render_tiled.rs  spellbook_data.rs  spellbook_frames.rs  (+4 more)
tests/: campfire_test.rs  extract_glue.rs  goblin_m2_debug.rs  login_e2e.rs  m2debug_e2e.rs  mail_system.rs  screenshot_regression.rs  skybox_light_skybox_flags_screenshot.rs  torch_bone_flags.rs
tests/unit/: animation_tests.rs  camera_post_process_tests.rs  camera_tests.rs  char_create_tests.rs  char_select_tests.rs  char_texture_tests.rs  character_customization_tests.rs  equipment_appearance_tests.rs  equipment_cloak_tests.rs  (+23 more)
(+395 files in other folders)
