[package]
name = "game-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
bevy = { version = "0.18", features = ["default", "bevy_dev_tools", "bevy_audio", "wav", "ktx2"] }
bevy_dylib = { version = "0.18", optional = true }
image-blp = "1"
peercred-ipc = { git = "https://github.com/Osso/peercred-ipc.git", tag = "v0.2.0" }
tokio = { version = "1", features = ["rt", "sync", "net", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
webp = "0.3"
half = "2"
glob = "0.3"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
cascette-client-storage = { path = "/home/osso/Repos/cascette-rs/crates/cascette-client-storage", features = ["local-install"] }
cascette-crypto = { path = "/home/osso/Repos/cascette-rs/crates/cascette-crypto" }
cascette-formats = { path = "/home/osso/Repos/cascette-rs/crates/cascette-formats" }
lightyear = { version = "0.26", features = ["client", "netcode", "replication", "udp"] }
shared = { path = "/syncthing/Sync/Projects/world-of-osso/game-server/crates/shared" }
dioxus-core = { path = "/home/osso/Repos/dioxus/packages/core" }
dioxus = { path = "/home/osso/Repos/dioxus/packages/dioxus", default-features = false, features = ["macro", "signals", "hooks"] }
dioxus-devtools = { path = "/home/osso/Repos/dioxus/packages/devtools" }
dioxus-cli-config = { path = "/home/osso/Repos/dioxus/packages/cli-config" }
game-api = { path = "/syncthing/Sync/Projects/world-of-osso/game-api" }
ab_glyph = "0.2"
quick-js = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
ktx2-rw = "0.2.4"

[[bin]]
name = "casc-local"
path = "src/bin/casc_local.rs"

[features]
dev = ["bevy_dylib"]

# Optimize deps in debug builds (Bevy is unusably slow at opt-level 0)
[profile.dev.package."*"]
opt-level = 2

# dioxus-core uses static_items_merged() to choose pointer vs structural
# template comparison. At opt-level 2, statics merge → pointer comparison →
# hotreloaded templates always mismatch → full tree replacement instead of diff.
# Force opt-level 0 so it falls back to structural (value) comparison.
[profile.dev.package.dioxus-core]
opt-level = 0
