[package]
name = "game-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
bevy = { version = "0.18", features = ["default", "bevy_dev_tools", "bevy_audio", "wav", "ktx2"] }
bevy_dylib = { version = "0.18", optional = true }
image-blp = "1"
peercred-ipc = { git = "https://github.com/Osso/peercred-ipc.git", tag = "v0.2.0" }
tokio = { version = "1", features = ["rt", "sync", "net", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
webp = "0.3"
half = "2"
glob = "0.3"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
cascette-client-storage = { git = "https://github.com/wowemulation-dev/cascette-rs", rev = "2d1294b", features = ["local-install"] }
cascette-crypto = { git = "https://github.com/wowemulation-dev/cascette-rs", rev = "2d1294b" }
cascette-formats = { git = "https://github.com/wowemulation-dev/cascette-rs", rev = "2d1294b" }
lightyear = { version = "0.26", features = ["client", "netcode", "replication", "udp"] }
shared = { git = "ssh://git@github.com/world-of-osso/game-server.git", rev = "60cb63c" }
game-api = { git = "ssh://git@github.com/world-of-osso/game-api.git", rev = "3827ad6" }
ui-toolkit = { git = "ssh://git@github.com/world-of-osso/ui-toolkit.git", rev = "3f301b3" }
ab_glyph = "0.2"
quick-js = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
ktx2-rw = "0.2.4"
notify = "7"

[[bin]]
name = "casc-local"
path = "src/bin/casc_local.rs"

[features]
dev = ["bevy_dylib"]

[patch."ssh://git@github.com/world-of-osso/game-server.git"]
shared = { path = "../game-server/crates/shared" }

# Optimize deps in debug builds (Bevy is unusably slow at opt-level 0)
[profile.dev.package."*"]
opt-level = 2
