[package]
name = "game-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
bevy = { version = "0.18", features = ["default", "bevy_dev_tools", "bevy_audio", "wav", "ktx2"] }
bevy_hanabi = "0.18"
bevy_dylib = { version = "0.18", optional = true }
image-blp = "1"
peercred-ipc = { git = "https://github.com/Osso/peercred-ipc.git", tag = "v0.2.0", optional = true }
tokio = { version = "1", features = ["rt", "sync", "net", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
typetag = "0.2"
serde_json = "1"
ron = "0.8"
webp = "0.3"
half = "2"
glob = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }
clap = { version = "4", features = ["derive"] }
cascette-client-storage = { git = "https://github.com/Osso/cascette-rs", rev = "5c5a5e3", features = ["local-install"], optional = true }
cascette-crypto = { git = "https://github.com/Osso/cascette-rs", rev = "5c5a5e3", optional = true }
cascette-formats = { git = "https://github.com/Osso/cascette-rs", rev = "5c5a5e3", optional = true }
lightyear = { version = "0.26", features = ["client", "netcode", "replication", "udp"] }
shared = { git = "https://github.com/world-of-osso/shared-protocol.git", rev = "e25c79d" }
game-api = { git = "https://github.com/world-of-osso/game-api.git", rev = "3827ad6" }
ui-toolkit = { git = "https://github.com/world-of-osso/ui-toolkit.git", rev = "3f301b3" }
osso_asset_resolver = { package = "asset-resolver", path = "../asset-resolver", default-features = false, optional = true }
ab_glyph = "0.2"
quick-js = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
ktx2-rw = "0.2.4"
notify = "7"
directories = "5"
arboard = { version = "3", features = ["wayland-data-control"] }
raw-window-handle = "0.6"
binrw = "0.15.1"
rusqlite = { version = "0.35", features = ["bundled"] }

[[bin]]
name = "game-engine-cli"
path = "src/bin/game-engine-cli/main.rs"
required-features = ["ipc"]

[[bin]]
name = "casc-local"
path = "src/bin/casc_local.rs"
required-features = ["casc-tools"]

[[bin]]
name = "casc_refresh"
path = "src/bin/casc_refresh.rs"
required-features = ["casc-tools"]

[features]
default = ["ipc", "casc"]
dev = ["bevy_dylib"]
ipc = ["peercred-ipc", "libc", "glob"]
casc = ["dep:osso_asset_resolver", "osso_asset_resolver/casc"]
casc-tools = [
  "casc",
  "dep:cascette-client-storage",
  "dep:cascette-crypto",
  "dep:cascette-formats",
]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser_benches"
harness = false

[patch."https://github.com/world-of-osso/shared-protocol.git"]
shared = { path = "../shared-protocol" }

[patch."https://github.com/world-of-osso/ui-toolkit.git"]
ui-toolkit = { path = "../ui-toolkit" }

# Optimize deps in debug builds (Bevy is unusably slow at opt-level 0)
[profile.dev.package."*"]
opt-level = 2
